# proofcheck_agent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  derivation_verifier_build_prompt.md  pyproject.toml  requirements.txt
examples/: run_on_snippet.py
examples/sample_derivations/: entropic_ot_dual.tex  fubini_misuse.tex
src/deriv_verifier/: __init__.py  __main__.py  cli.py  config.py  llm.py  pipeline.py  schemas.py
src/deriv_verifier/agents/: __init__.py  critic.py  decomposer.py  parser.py  rewriter.py  verifier.py
src/deriv_verifier/loop/: __init__.py  interactive.py
src/deriv_verifier/tools/: __init__.py  assumption_stack.py  hand_wave.py  latex_parser.py  notation_registry.py  report_builder.py  sympy_check.py
tests/: test_assumption_stack.py  test_hand_wave.py  test_latex_parser.py  test_notation_registry.py  test_schemas.py  test_sympy_check.py
tests/fixtures/: fubini_misuse.tex  notation_reference.yaml  ot_schrodinger_bridge.tex  simple_algebra.tex
